tests/poorly_formed_exports_config_false/poorly_formed_exports_config_false.exp
FLOW STATUS:
Error ------------------------------------------------------------------------------------------------- libs/libs.js:4:3

Cannot resolve name `exports`.

   4|   exports.foo = 5;
        ^^^^^^^



Found 1 error
FLOW CHECK-CONTENTS:
Error ------------------------------------------------------------------------------------------------- libs/libs.js:4:3

Cannot resolve name `exports`.

   4|   exports.foo = 5;
        ^^^^^^^



Found 1 error
